--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 
 before_script:
   - export APP_SETTINGS="project.config.TestingConfig"
-  - export DATABASE_TEST_URL=postgresql://beta:@localhost/users_test
+  - export DATABASE_TEST_URL=postgresql://beta:beta@localhost/users_test
   - psql -c 'create database users_test;' -U beta
   - python manage.py recreate_db
 
