--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ install:
 
 before_script:
   - export APP_SETTINGS="project.config.TestingConfig"
-  - export DATABASE_TEST_URL=postgresql://beta:beta@localhost/users_test
-  - psql -c 'create database users_test;' -U beta
+  - export DATABASE_TEST_URL=postgresql://postgres:@localhost/users_test
+  - psql -c 'create database users_test;' -U postgres
   - python manage.py recreate_db
 
 script:
